--- a/grow/README
+++ b/grow/README
@@ -1,10 +1,4 @@
 
-Yeah...
-
-Random Crap
-
-This is the directory for CSCI 479 work.
-
-This is the directory for CSCI479
+Readme for GROW. The social media platform for Bucknell students to connect with nearby community service opportunities.
 
 
